# TrafficSimulator

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  city.json  smallcity.json
libs/: readme.md
src/: analysis.cpp  analysis.hpp  building.cpp  building.hpp  car.cpp  car.hpp  cell.cpp  cell.hpp  city.cpp  city.hpp  commercial.cpp  commercial.hpp  event.cpp  event.hpp  grid.cpp  grid.hpp  industrial.hpp  intersection.cpp  intersection.hpp  invalidcityexception.hpp  main.cpp  node.cpp  node.hpp  person.cpp  person.hpp  residential.hpp  road.cpp  road.hpp  simulationClock.cpp  simulationClock.hpp  simulator.cpp  simulator.hpp  trafficlight.hpp  visualization.cpp  visualization.hpp
tests/: building_tests.cpp  car_tests.cpp  intersection_tests.cpp  main.cpp  readme.md  simulationClock_tests.cpp  test_functions.hpp  tests  trafficlight_tests.cpp
tests/json/: json  json.cpp  test.json
